--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     hello alina
     <div class="box"></div>
     <div class="about"></div>
+    <div class="item"></div>
     <script src="index.js"></script>
 </body>
 </html>
