--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="box"></div>
     <div class="about"></div>
     <div class="item"></div>
+    <img class="foto" src="https://m.media-amazon.com/images/I/61RvjuqdF5L._AC_SL1500_.jpg" alt="">
     <script src="index.js"></script>
 </body>
 </html>
